# OpenDASFirmware

./: AFE.cpp  AFE.hpp  CMakeLists.txt  Cli.hpp  HWDefs.h  README.md  ShiftRegister595.cpp  ShiftRegister595.hpp  VoltMeterInputs.cpp  VoltMeterInputs.hpp  demo_main.cpp  embedded_cli.h  main.cpp  ppBuf.hpp  trigger.hpp
ADS127L11/: ADS127L11.cpp  ADS127L11.hpp
src/: AFE.cpp  Cli.cpp  HWDefs.h  ShiftRegister595.hpp  VmHw.hpp  VmHwInit.cpp  VoltMeterInputs.cpp  main.cpp  print.hpp
src/ADS127L11/: ADS127L11.cpp
src/FreeRTOS_Config/: FreeRTOSConfig.h
src/PrintMacros/: printMacros.h
src/fifo/: fifo.hpp  fifo_main.cpp
